reflecting new appdata installation folder for emudeck

--- a/src/main/pages/paths.html
+++ b/src/main/pages/paths.html
@@ -218,10 +218,10 @@
 
       const tooltips = {
         rpcs3:
-          "The RPCS3 installation folder. If using EmuDeck, it's by default inside C:/[Your User]/emudeck/EmulationStation-DE/Emulators ",
-        cemu: "The Cemu installation folder. If using EmuDeck, it's by default inside C:/[Your User]/emudeck/EmulationStation-DE/Emulators ",
+          "The RPCS3 installation folder. If using EmuDeck, it's by default inside %AppData%/emudeck/Emulators ",
+        cemu: "The Cemu installation folder. If using EmuDeck, it's by default inside %AppData%/emudeck/Emulators ",
         dolphin:
-          "If using EmuDeck, it's the installation folder by default inside C:/[Your User]/emudeck/EmulationStation-DE/Emulators.\nIf using standalone Dolphin, it's the Dolphin Emulator folder inside your Documents.",
+          "If using EmuDeck, it's the installation folder by default inside %AppData%/emudeck/Emulators.\nIf using standalone Dolphin, it's the Dolphin Emulator folder inside your Documents.",
         ghwtde:
           "It's the game settings folder by default inside your Documents/My Games folder.",
       };
