--- a/src/main/pages/paths.html
+++ b/src/main/pages/paths.html
@@ -1,263 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>App Configuration</title>
-  </head>
-  <style>
-    body {
-      background: #ddd;
-      color: #444;
-    }
-    * {
-      font-family: sans-serif;
-    }
-    .form {
-      visibility: hidden;
-    }
 
-    .form.active {
-      visibility: visible;
-    }
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>App Configuration</title>
+</head>
+<style>
+  body {
+    background: #ddd;
+    color: #444;
+  }
 
-    .field {
-      background: #bbb;
-      padding: 10px;
-      display: flex;
-      flex-direction: column;
-      gap: 5px;
-    }
+  * {
+    font-family: sans-serif;
+  }
 
-    .field label {
-      font-weight: 600;
-      text-transform: uppercase;
-    }
+  .form {
+    visibility: hidden;
+  }
 
-    .field .field-input {
-      width: 100%;
-      display: flex;
-      gap: 10px;
-    }
-    .buttons {
-      flex-shrink: 0;
-    }
+  .form.active {
+    visibility: visible;
+  }
 
-    .field .path-display {
-      width: 100%;
-      text-overflow: ellipsis;
-      overflow: hidden;
-      white-space: nowrap;
-    }
+  .field {
+    background: #bbb;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+  }
 
-    .header {
-      padding: 10px;
-      padding-bottom: 10px;
-    }
+  .field label {
+    font-weight: 600;
+    text-transform: uppercase;
+  }
 
-    .header h2 {
-      margin-bottom: 0px;
-      font-size: 40px;
-      font-weight: 600;
-      color: #555;
-      text-transform: uppercase;
-    }
+  .field .field-input {
+    width: 100%;
+    display: flex;
+    gap: 10px;
+  }
 
-    .tooltip {
-      font-size: 12px;
-      line-height: 0;
-      margin: 0;
-      aspect-ratio: 1/1;
-      padding: 4px;
-      border-radius: 50%;
-      font-weight: 600;
-      background: darkgoldenrod;
-      border-style: solid;
-      border: 2;
-    }
-    .tooltip:hover {
-      background: rgb(255, 255, 255);
-    }
+  .buttons {
+    flex-shrink: 0;
+  }
 
-    .label-wrapper {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-    }
+  .field .path-display {
+    width: 100%;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+  }
 
-    .label-wrapper span {
-      display: flex;
-      align-items: center;
-    }
+  .header {
+    padding: 10px;
+    padding-bottom: 10px;
+  }
 
-    button[type="submit"] {
-      margin-top: 10px;
-    }
-  </style>
-  <body>
-    <div class="header">
-      <h2>Set Your Paths</h2>
-      <p>
-        Provide the path to each software you want AutoJoy to integrate with.
-      </p>
-      <p>
-        For software you don't have or don't want to integrate with, leave it
-        blank.
-      </p>
-      <p>Click <b>Clear</b> to stop integrating with specific software.</p>
-      <p class="message"></p>
-    </div>
+  .header h2 {
+    margin-bottom: 0px;
+    font-size: 40px;
+    font-weight: 600;
+    color: #555;
+    text-transform: uppercase;
+  }
 
-    <form
-      id="form-wrapper"
-      onsubmit="event.preventDefault(); saveConfig();"
-      class="form"
-    >
-      <div class="field">
-        <div class="label-wrapper">
-          <label>RPCS3</label>
-          <span>
-            <button type="button" class="tooltip" data-tooltip="rpcs3">
-              ?
-            </button>
-          </span>
-        </div>
-        <div class="field-input">
-          <span id="rpcs3-path" class="path-display">Not set</span>
-          <div class="buttons">
-            <button type="button" onclick="selectFolder('rpcs3')">
-              Browse
-            </button>
-            <button type="button" onclick="clearField('rpcs3')">Clear</button>
+  .tooltip {
+    font-size: 12px;
+    line-height: 0;
+    margin: 0;
+    aspect-ratio: 1/1;
+    padding: 4px;
+    border-radius: 50%;
+    font-weight: 600;
+    background: darkgoldenrod;
+    border-style: solid;
+    border: 2;
+  }
+
+  .tooltip:hover {
+    background: rgb(255, 255, 255);
+  }
+
+  .label-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+
+  .label-wrapper span {
+    display: flex;
+    align-items: center;
+  }
+
+  button[type="submit"] {
+    margin-top: 10px;
+  }
+</style>
+
+<body>
+  <script src="./petite-vue.iife.js"></script>
+  <div class="header">
+    <h2>Set Your Paths</h2>
+    <p>
+      Provide the path to each software you want AutoJoy to integrate with.
+    </p>
+    <p>
+      For software you don't have or don't want to integrate with, leave it
+      blank.
+    </p>
+    <p>Click <b>Clear</b> to stop integrating with specific software.</p>
+    <p class="message"></p>
+  </div>
+
+  <div v-scope @vue:mounted="mounted">
+    <form class="form" :class="{ active: ready }" @submit.prevent="saveConfig">
+      <template v-for="field in fields">
+        <div class="field">
+          <div class="label-wrapper">
+            <label>{{ field.label }}</label>
+            <span>
+              <button type="button" class="tooltip" @click="showTooltip(field.key)">?</button>
+            </span>
+          </div>
+          <div class="field-input">
+            <span class="path-display">{{ paths[field.key] || 'Not set' }}</span>
+            <div class="buttons">
+              <button type="button" @click="selectFolder(field.key)">Browse</button>
+              <button type="button" @click="clearField(field.key)">Clear</button>
+            </div>
           </div>
         </div>
-      </div>
-
-      <div class="field">
-        <div class="label-wrapper">
-          <label>Dolphin</label>
-          <span>
-            <button type="button" class="tooltip" data-tooltip="dolphin">
-              ?
-            </button>
-          </span>
-        </div>
-        <div class="field-input">
-          <span id="dolphin-path" class="path-display">Not set</span>
-          <div class="buttons">
-            <button type="button" onclick="selectFolder('dolphin')">
-              Browse
-            </button>
-            <button type="button" onclick="clearField('dolphin')">Clear</button>
-          </div>
-        </div>
-      </div>
-
-      <div class="field">
-        <div class="label-wrapper">
-          <label>Cemu</label>
-          <span>
-            <button type="button" class="tooltip" data-tooltip="cemu">?</button>
-          </span>
-        </div>
-        <div class="field-input">
-          <span id="cemu-path" class="path-display">Not set</span>
-          <div class="buttons">
-            <button type="button" onclick="selectFolder('cemu')">Browse</button>
-            <button type="button" onclick="clearField('cemu')">Clear</button>
-          </div>
-        </div>
-      </div>
-
-      <div class="field">
-        <div class="label-wrapper">
-          <label>Guitar Hero World Tour: Definitive Edition</label>
-          <span>
-            <button type="button" class="tooltip" data-tooltip="ghwtde">
-              ?
-            </button>
-          </span>
-        </div>
-        <div class="field-input">
-          <span id="ghwtde-path" class="path-display">Not set</span>
-          <div class="buttons">
-            <button type="button" onclick="selectFolder('ghwtde')">
-              Browse
-            </button>
-            <button type="button" onclick="clearField('ghwtde')">Clear</button>
-          </div>
-        </div>
-      </div>
-
+      </template>
       <button type="submit">Save</button>
     </form>
+  </div>
 
-    <script>
-      (async () => {
-        const user = await window.electron.getUser();
-        Object.entries(user?.paths ?? {}).forEach(([key, value]) => {
-          const element = document.getElementById(`${key}-path`);
-          if (element) {
-            element.textContent = value || "Not set";
-          }
-        });
-
-        document.querySelector("#form-wrapper").classList.add("active");
-      })();
-
-      async function selectFolder(key) {
-        const folderPath = await window.electron.selectFolder();
-        if (folderPath) {
-          document.getElementById(`${key}-path`).textContent = folderPath;
-        }
-      }
-
-      function clearField(key) {
-        document.getElementById(`${key}-path`).textContent = "Not set";
-      }
-
-      const tooltips = {
-        rpcs3:
-          "The RPCS3 installation folder. If using EmuDeck, it's by default inside %AppData%/emudeck/Emulators ",
+  <script>
+    window.PetiteVue.createApp({
+      ready: false,
+      fields: [
+        { key: 'rpcs3', label: 'RPCS3' },
+        { key: 'dolphin', label: 'Dolphin' },
+        { key: 'cemu', label: 'Cemu' },
+        { key: 'ghwtde', label: 'Guitar Hero World Tour: Definitive Edition' },
+      ],
+      paths: { rpcs3: '', dolphin: '', cemu: '', ghwtde: '' },
+      tooltips: {
+        rpcs3: "The RPCS3 installation folder. If using EmuDeck, it's by default inside %AppData%/emudeck/Emulators ",
         cemu: "The Cemu installation folder. If using EmuDeck, it's by default inside %AppData%/emudeck/Emulators ",
-        dolphin:
-          "If using EmuDeck, it's the installation folder by default inside %AppData%/emudeck/Emulators.\nIf using standalone Dolphin, it's the Dolphin Emulator folder inside your Documents.",
-        ghwtde:
-          "It's the game settings folder by default inside your Documents/My Games folder.",
-      };
+        dolphin: "If using EmuDeck, it's the installation folder by default inside %AppData%/emudeck/Emulators.\nIf using standalone Dolphin, it's the Dolphin Emulator folder inside your Documents.",
+        ghwtde: "It's the game settings folder by default inside your Documents/My Games folder.",
+      },
+      async mounted() {
+        const user = await window.electron.getUser();
+        this.paths = { ...this.paths, ...(user?.paths ?? {}) };
+        this.ready = true;
+      },
+      async selectFolder(key) {
+        const folderPath = await window.electron.selectFolder();
+        if (folderPath) this.paths[key] = folderPath;
+      },
+      clearField(key) {
+        this.paths[key] = '';
+      },
+      showTooltip(key) {
+        alert(this.tooltips[key]);
+      },
+      saveConfig() {
+        window.electron.setPaths({ ...this.paths });
+        alert("Settings updated! You can close this configuration window and enjoy!\nThe app is running in the tray.");
+      },
+    }).mount();
+  </script>
+</body>
 
-      document.querySelectorAll(".tooltip").forEach((tooltip) => {
-        tooltip.addEventListener("click", () => {
-          alert(tooltips[tooltip.dataset.tooltip]);
-        });
-      });
-
-      function saveConfig() {
-        const paths = {
-          rpcs3:
-            document.getElementById("rpcs3-path").textContent !== "Not set"
-              ? document.getElementById("rpcs3-path").textContent
-              : "",
-          dolphin:
-            document.getElementById("dolphin-path").textContent !== "Not set"
-              ? document.getElementById("dolphin-path").textContent
-              : "",
-          cemu:
-            document.getElementById("cemu-path").textContent !== "Not set"
-              ? document.getElementById("cemu-path").textContent
-              : "",
-          ghwtde:
-            document.getElementById("ghwtde-path").textContent !== "Not set"
-              ? document.getElementById("ghwtde-path").textContent
-              : "",
-        };
-
-        window.electron.setPaths(paths);
-
-        alert(
-          "Settings updated! You can close this configuration window and enjoy!\nThe app is running in the tray."
-        );
-      }
-    </script>
-  </body>
 </html>
