--- a/src/main/pages/paths.html
+++ b/src/main/pages/paths.html
@@ -7,9 +7,12 @@
   <title>App Configuration</title>
 </head>
 <style>
-  body {
+  body,
+  html {
     background: #ddd;
     color: #444;
+    padding: 0px;
+    margin: 0px !important;
   }
 
   * {
@@ -55,7 +58,6 @@
   }
 
   .header {
-    padding: 10px;
     padding-bottom: 10px;
   }
 
@@ -63,6 +65,7 @@
     margin-bottom: 0px;
     font-size: 40px;
     font-weight: 600;
+    margin-top: 0px;
     color: #555;
     text-transform: uppercase;
   }
@@ -98,46 +101,91 @@
   button[type="submit"] {
     margin-top: 10px;
   }
+
+  .content {
+    flex: 1;
+    padding: 10px;
+  }
+
+  .menubar {
+    margin: 0px;
+    padding: 10px 20px;
+    border-right: 1px solid #444;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .menubar ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    text-align: right;
+    gap: 10px;
+  }
+
+  .menubar a {
+    text-decoration: none;
+    color: #444;
+    font-weight: 600;
+    text-transform: uppercase;
+  }
+
+  .layout {
+    display: flex;
+    flex-direction: row;
+    height: 100vh;
+  }
 </style>
 
 <body>
-  <div class="header">
-    <h2>Set Your Paths</h2>
-    <p>
-      Provide the path to each software you want AutoJoy to integrate with.
-    </p>
-    <p>
-      For software you don't have or don't want to integrate with, leave it
-      blank.
-    </p>
-    <p>Click <b>Clear</b> to stop integrating with specific software.</p>
-    <p class="message"></p>
-  </div>
-
-  <script src="./petite-vue.iife.js"></script>
-  <div v-scope @vue:mounted="mounted">
-    <form class="form" :class="{ active: ready }" @submit.prevent="saveConfig">
-      <template v-for="field in fields">
-        <div class="field">
-          <div class="label-wrapper">
-            <label>{{ field.label }}</label>
-            <span>
-              <button type="button" class="tooltip" @click="showTooltip(field.key)">?</button>
-            </span>
-          </div>
-          <div class="field-input">
-            <span class="path-display">{{ paths[field.key] || 'Not set' }}</span>
-            <div class="buttons">
-              <button type="button" @click="selectFolder(field.key)">Browse</button>
-              <button type="button" @click="clearField(field.key)">Clear</button>
+  <div class="layout">
+    <menu type="menubar" class="menubar">
+      <ul>
+        <li><a href="paths.html">Paths</a></li>
+        <li><a href="service.html">Service</a></li>
+      </ul>
+    </menu>
+    <div class="content">
+      <div class="header">
+        <h2>Set Your Paths</h2>
+        <p>
+          Provide the path to each software you want AutoJoy to integrate with.
+        </p>
+        <p>
+          For software you don't have or don't want to integrate with, leave it
+          blank.
+        </p>
+        <p>Click <b>Clear</b> to stop integrating with specific software.</p>
+        <p class="message"></p>
+      </div>
+      <div v-scope @vue:mounted="mounted">
+        <form class="form" :class="{ active: ready }" @submit.prevent="saveConfig">
+          <template v-for="field in fields">
+            <div class="field">
+              <div class="label-wrapper">
+                <label>{{ field.label }}</label>
+                <span>
+                  <button type="button" class="tooltip" @click="showTooltip(field.key)">?</button>
+                </span>
+              </div>
+              <div class="field-input">
+                <span class="path-display">{{ paths[field.key] || 'Not set' }}</span>
+                <div class="buttons">
+                  <button type="button" @click="selectFolder(field.key)">Browse</button>
+                  <button type="button" @click="clearField(field.key)">Clear</button>
+                </div>
+              </div>
             </div>
-          </div>
-        </div>
-      </template>
-      <button type="submit">Save</button>
-    </form>
+          </template>
+          <button type="submit">Save</button>
+        </form>
+      </div>
+    </div>
   </div>
-
+  <script src="./petite-vue.iife.js"></script>
   <script>
     window.PetiteVue.createApp({
       ready: false,
