updating global styles

--- a/src/main/pages/index.html
+++ b/src/main/pages/index.html
@@ -5,6 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body,
+        html {
+            background: #ddd;
+            color: #444;
+            padding: 0px;
+            margin: 0px !important;
+        }
+
+        * {
+            font-family: sans-serif;
+        }
+    </style>
 </head>
 
 <body>
