--- a/src/main/pages/live-logs.html
+++ b/src/main/pages/live-logs.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AutoJoy Service Logs</title>
+  <title>AutoJoy Backend Service Logs</title>
   <style>
     html,
     body {
